--- a/frontend/src/blocks/gallery/gallery.css
+++ b/frontend/src/blocks/gallery/gallery.css
@@ -2,6 +2,6 @@
   width: 100%;
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(232px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(232px, 1fr));
   grid-gap: 21px 18px;
 }
